# Anvil

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: learning-path.md  repo-layout.md
examples/: browser_tools.py  json_loop_stub_demo.py
src/anvil/: __init__.py  __main__chat.py  agent_cli.py  agent_protocol.py  api.py  background.py  cli.py  coding_agent.py  compression.py  config.py  context_schema.py  errors.py  hooks.py  layered_config.py  logging.py  mailbox.py  messages.py  permissions.py  policies.py  prompts.py  retry.py  run_recorder.py  run_schema.py  runtime.py  scheduler.py  session.py  skills.py  subagents.py  task_graph.py  task_store.py  team_runtime.py  todo.py  token_estimation.py  tool_spec.py  tool_use_loop.py  tools.py  utils.py  (+1 more)
tests/: _bootstrap.py  test_agent.py  test_agent_cli.py  test_agent_protocol.py  test_api.py  test_background.py  test_chat_runtime.py  test_claude_api_features.py  test_claude_api_optimizations.py  test_cli.py  test_compression.py  test_hooks.py  test_json_loop_step.py  test_json_protocol.py  test_layered_config.py  test_openclaw_cli.py  test_permissions.py  test_provider_anthropic_gemini.py  test_retry.py  test_session.py  test_session_enhanced.py  test_step_registry.py  test_subagents.py  test_team_runtime.py  test_todo.py  test_token_estimation.py  test_tool_use_loop.py  test_tools.py  test_zero2agent_improvements.py  test_zero2agent_round3.py  test_zero2agent_round4.py
(+224 files in other folders)
