[project]
name = "LoopAgent"
version = "0.1.0"
description = "Enterprise-grade loop agent skeleton (stdlib-only core)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

