[project]
name = "LoopAgent"
version = "0.1.0"
description = "Enterprise-grade loop agent skeleton (stdlib-only core)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
tui = [
  "textual>=0.86.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
